[FEAT] Introduction migrations & update swagger
